src/test/run-pass/multi-let.rs
fn main() { let x = 10, y = x; assert (y == 10); }
