src/test/compile-fail/do1.rs
fn main() {
    let x = do y; //! ERROR: `do` must be followed by a block call
}
